fix: fediverse feed on small devices

--- a/web/css/src/main.css
+++ b/web/css/src/main.css
@@ -32,7 +32,7 @@
 	.nav-list a {
 		@apply text-neutral-200;
 	}
-	
+
 	.section-container {
 		@apply container mx-auto p-2;
 	}
@@ -214,7 +214,12 @@
 .toot .permalink {
 	text-decoration: none;
 	color: #4e4e69;
-	float: right;
+}
+
+@media (min-width: 600px) {
+  .toot .permalink {
+	  float: right;
+  }
 }
 
 .toot .permalink:hover {
